RESOLVED FIXED54768
Fix assertion in SharedMemory::create when trying to snapshot 0x0 plug-in
https://bugs.webkit.org/show_bug.cgi?id=54768
Summary Fix assertion in SharedMemory::create when trying to snapshot 0x0 plug-in
Anders Carlsson
Reported 2011-02-18 13:14:44 PST
Fix assertion in SharedMemory::create when trying to snapshot 0x0 plug-in
Attachments
Patch (1.24 KB, patch)
2011-02-18 13:15 PST, Anders Carlsson
no flags
Patch (1.94 KB, patch)
2011-02-18 13:18 PST, Anders Carlsson
simon.fraser: review+
Anders Carlsson
Comment 1 2011-02-18 13:15:40 PST
Anders Carlsson
Comment 2 2011-02-18 13:18:19 PST
Anders Carlsson
Comment 3 2011-02-18 13:23:15 PST
Note You need to log in before you can comment on or make changes to this bug.