2011-02-18  Anders Carlsson  <andersca@apple.com>

Reviewed by Simon Fraser.

        Fix assertion in SharedMemory::create when trying to snapshot 0x0 plug-in
        https://bugs.webkit.org/show_bug.cgi?id=54768

        * PluginProcess/PluginControllerProxy.cpp:
        (WebKit::PluginControllerProxy::snapshot):
        Don't try to create a handle from a null ShareableBitmap.

        * WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
        (WebKit::NetscapePlugin::snapshot):
        Check for a zero sized plug-in before trying to create a snapshot.


Canonical link: https://commits.webkit.org/68978@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79023 268f45cc-cd09-0410-ab3c-d52691b4dbfc